add match screens

--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Hello!</h1>
         <button onclick="signout()">Sign out</button>
+        <script>
+            window.location.href = "/web/game/characters"
+        </script>
     </body>
 </html>
