--- a/web/auth/register/index.html
+++ b/web/auth/register/index.html
@@ -2,16 +2,19 @@
 <html>
     <head>
         <link rel="stylesheet" href="/web/styles.css">
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
         <script src="/web/error.js"></script>
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="error"></div>
-        <form>
-            <input type="text" id="username">
-            <input type="password" id="password">
-            <input type="password" id="repeated_password">
-            <input type="button" value="Register" onclick="register()">
-        </form>
+        <div id="main" x-data="registerData()">
+            <div class="error" x-show="error !== null" x-text="error"></div>
+            <div>
+                <input type="text" x-model="username">
+                <input type="password" x-model="password">
+                <input type="password" x-model="repeatedPassword">
+                <button @click="register()">Register</button>
+            </div>
+        </div>
     </body>
 </html>
