--- a/web/friends/index.html
+++ b/web/friends/index.html
@@ -7,7 +7,7 @@
     <script src="/web/scripts/utils.js"></script>
     <script src="/web/scripts/constants.js"></script>
     <script src="script.js"></script>
-    <!-- <script src="/scripts/POPUP.js"></script> -->
+    <script src="/web/scripts/notifications.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
