--- a/web/game/characters/index.html
+++ b/web/game/characters/index.html
@@ -12,7 +12,7 @@
     <script src="buttonsleft.js"></script>
     <script src="/web/scripts/utils.js"></script>
     <script src="script.js"></script>
-    <!-- <script src="/scripts/POPUP.js"></script> -->
+    <script src="/web/scripts/notifications.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
