--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,8 @@
     <title>My profile</title>
     <script src="/web/scripts/utils.js"></script>
     <script src="/web/scripts/profile.js"></script>
-    <!-- <script src="/scripts/POPUP.js"></script> -->
-    <!-- <script src="/scripts/constants.js"></script> -->
+    <script src="/web/scripts/notifications.js"></script>
+    <script src="/web/scripts/constants.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
