--- a/web/money/conversion/index.html
+++ b/web/money/conversion/index.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
     <script src="/web/scripts/loading_bar.js"></script>
     <script src="/web/scripts/interface_structs.js"></script>
-    <!-- <script src="/scripts/POPUP.js"></script> -->
+    <script src="/web/scripts/notifications.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
