--- a/web/friends/index.html
+++ b/web/friends/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/web/scripts/style.css"/>
     <meta charset="UTF-8">
     <title>Friend list</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/web/scripts/utils.js"></script>
     <script src="/web/scripts/constants.js"></script>
     <script src="script.js"></script>
@@ -28,7 +29,7 @@
             <div align="center"><a href="/web/shop/">Shop</a></div>
         </td>
         <td class="rightc">
-            <div align="right"><a href="/logout">Logout</a></div>
+            <div align="right"><a href="#" onclick="logout()">Logout</a></div>
         </td>
     </tr>
 </table>
