fix sign in and register pages

--- a/web/auth/register/index.html
+++ b/web/auth/register/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/css" href="/web/scripts/style.css" media="screen" />
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+        body {
+            position: relative;
+            width: auto;
+            height: auto;
+            left: auto;
+        }
+    </style>
     <script src="/web/scripts/tutorial.js"></script>
     <script>
         async function registerFunc() {
