--- a/web/auth/signin/index.html
+++ b/web/auth/signin/index.html
@@ -4,6 +4,15 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/web/scripts/style.css" media="screen" />
     <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+        body {
+            position: relative;
+            width: auto;
+            height: auto;
+            left: auto;
+        }
+    </style>
     <script>
         async function loginFunc() {
             let username = document.getElementById("username").value;
